Refactor and partial integration with previous SIC work:
- Removed Eraser and Wire nodes
- Free Pointer is now a node
- Number of ports now fixed per node
- Fixed left-right commutation flipping
- Remove redex duplication
- Prettify printing
- Various other minor changes

--- a/package.yaml
+++ b/package.yaml
@@ -16,6 +16,7 @@ dependencies:
   - text
   - mtl
   - containers
+  - megaparsec
 
 default-extensions:
   - NoImplicitPrelude
@@ -49,8 +50,11 @@ ghc-options:
 library:
   source-dirs: src 
   exposed-modules:
-    - INet.SIC
-    - INet.Examples
+    - SIC.INet.Examples
+    - SIC.Type
+    - SIC.INet
+    - SIC.Parser
+    - SIC.Compiler
 
 executables:
   fme:
